--- a/success/index.html
+++ b/success/index.html
@@ -7,7 +7,15 @@
 				<link rel="stylesheet" href="css/style.css"/>
 				<link rel="stylesheet" href="css/media.css"/>
 			
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16914210144"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'AW-16914210144');
+</script>
 </head>
 			<body>
 
