--- a/success/index.html
+++ b/success/index.html
@@ -16,6 +16,15 @@
 
   gtag('config', 'AW-16914210144');
 </script>
+<!-- Event snippet for Спасибо conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-16914210144/g-79CLDerbkaEOC6qYE_',
+      'value': 10.0,
+      'currency': 'UAH'
+  });
+</script>
+
 </head>
 			<body>
 
